--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -126,12 +126,12 @@
         </div>
         <h3 class="about-heading">Мои контакты</h3>
         <p class="about-text">
-          Телефон:           +7 (905) 556-6002 <br>
-          Адрес:             Улица Студенческая, дом 5, Город Нахабино, Страна Россия<br>
+          Телефон: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; +7 (905) 556-6002 <br>
+          Адрес:    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Улица Студенческая, дом 5, Город Нахабино, Страна Россия<br>
           Электронная почта: ardy2@yandex.ru <br>
-          Telegram:          @annaokrashivanievolos <br>
-          Facebook:          facebook.com/annaokrashivanievolos <br>
-          Twitter:           @annaokrashivanievolos <br>
+          Telegram: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@annaokrashivanievolos <br>
+          Facebook: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;facebook.com/annaokrashivanievolos <br>
+          Twitter: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@annaokrashivanievolos <br>
 
           Не стесняйтесь обращаться ко мне по любым вопросам, записи на прием или консультации. Я всегда готова помочь
           вам создать
